UI overhaul, logic integrated.

--- a/financeiur/src/index.css
+++ b/financeiur/src/index.css
@@ -3,14 +3,18 @@
 html,
 body,
 #root,
-.app,
-.content{
+.app{
   height: 100%;
   width: 100%;
   font-family: 'Source Sans 3', sans-serif;
 }
-
+.content{
+  height:100%;
+  width:100%;
+  overflow:scroll;
+}
 .app{
+  
   display: flex;
   position: relative;
 }
